# pico-synth

./: .gitignore  README.md  TODO.md  Taskfile.yml  synth.code-workspace
.devcontainer/: Dockerfile  devcontainer.json
doc/: message-definition.md  pico-synth.md  todo.md
resources/: analysis.py  icons.xcf
source/: CMakeLists.txt  CMakePresets.json  i2s.cc  i2s.h  main.cc  oscillator.cc  oscillator.h
source/cmake/: pico-project.cmake
source/device/: CMakeLists.txt
source/device/display/: CMakeLists.txt  display.cc  display.h  display_config.h  st7735.cc  st7735.h
source/device/i2s/: CMakeLists.txt  i2s.pio  i2s_config.h
source/device/io/: CMakeLists.txt  gpio_interrupt_handler.cc  gpio_interrupt_handler.h  push_button.cc  push_button.h  push_button_config.h  rotary_encoder.cc  rotary_encoder.h  rotary_encoder_config.h
source/device/random/: CMakeLists.txt  pico-random.h
source/executable/midi-adapter/: CMakeLists.txt  controller.cc  controller.h  hw_config.h  knob.cc  knob.h  main.cc  selector.cc  selector.h  synth.cc  synth.h  synth_config.h  usb_descriptors.c
source/executable/midi-adapter/icons/: img_noise_wave.c  img_sawtooth_wave.c  img_square_wave.c  img_triangle_wave.c
source/executable/midi-adapter/ui/: input_field.h  oscillator_selection.cc  oscillator_selection.h  parameter.h  range_input.cc  range_input.h  theme.h  ui.cc  ui.h  wave_form_selection.cc  wave_form_selection.h
source/executable/pico-synth/: CMakeLists.txt  channel.h  channel_config.h  config.h  control.cc  control.h  control_config.h  demo.cc  demo.h  main.cc  mixer.cc  mixer.h  tone-generator.cc  tone-generator.h
source/host/: CMakeLists.txt
source/host/simulator/: CMakeLists.txt  main.cc
source/host/specs/: CMakeLists.txt
source/host/specs/control/: control.spec.cc  focus.spec.cc  midi.spec.cc
source/host/specs/message/: message.spec.cc
source/host/specs/midi/: midi.spec.cc
source/midi-adapter/: CMakeLists.txt  display.h  main.cc
source/midi-adapter/lvgl/: CMakeLists.txt
source/pico/: CMakeLists.txt
source/pico-synth/: CMakeLists.txt  config.h  envelope-generator.cc  envelope-generator.h  i2s.cc  i2s.h  main.cc  oscillator.cc  oscillator.h  source.h
source/pico/device/: CMakeLists.txt
source/pico/device/i2s/: CMakeLists.txt  i2s.cc
source/pico/device/i2s/include/synth/device/: i2s.config.h  i2s.h
source/pico/device/random/: CMakeLists.txt  pico-random.cc
source/pico/device/random/include/synth/device/: pico-random.h
source/pico/midi-adapter/: CMakeLists.txt  main.cc  synth_spi.cc  synth_spi.config.h  synth_spi.h
source/pico/pico-synth/: CMakeLists.txt  adapter_spi.cc  adapter_spi.config.h  adapter_spi.h  main.cc
source/shared/: CMakeLists.txt
source/shared/control/: CMakeLists.txt  control.cc  focus.cc  synth_control.cc
source/shared/control/include/synth/control/: control.h  control_event.h  focus.h  input.h  input_event.h  model.h  synth_control.h
source/shared/message/: CMakeLists.txt  message.cc
source/shared/message/include/synth/message/: message.h  receiver.h  sender.h  transceiver.h  types.h
source/shared/midi/: CMakeLists.txt  midi_control.cc
source/shared/midi/include/synth/midi/: midi_control.h
source/shared/synth/: CMakeLists.txt  envelope-generator.cc  oscillator.cc  synth.cc  tick-counter.cc  tick_counter.cc  wave-generation.cc
source/shared/synth/include/synth/synth/: envelope-generator.h  oscillator.h  synth.h  tick-counter.h  tick.h  tick_counter.h  wave-form.h  wave-generation.h
source/shared/types/: CMakeLists.txt
source/shared/types/include/synth/: definitions.h  wave-form.h
source/spec/: CMakeLists.txt  spec-host.cc  spec-pico.cc  spec.cc  spec.h
uisim/: CMakeLists.txt  README.md  lv_conf.h  lv_drv_conf.h  main.cc  x11.c
